@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - add ignore_not_found attribute
 
 0.14      2015-01-22 08:19:42 -0500
   - Fixed some broken links in the documentation
